                                                        -*- coding: utf-8 -*-
Changes with Apache 2.3.0
[ When backported to 2.2.x, remove entry from this file ]

  *) mod_proxy: Prevent segmentation faults by correctly flushing all buckets
     from the proxy backend. PR 45792 [Ruediger Pluem]

  *) mod_dir: Support "DirectoryIndex None" 
     Suggested By André Warnier <aw ice-sa.com> [Eric Covener]

  *) mod_proxy: Add the possibility to set the worker parameters
     connectiontimeout and ping in milliseconds. [Ruediger Pluem]

  *) mod_ssl: Send Content-Type application/ocsp-request for POST requests to
     OSCP responders. PR 46014 [Dr Stephen Henson <steve openssl.org>]

  *) Export and install the mod_rewrite.h header to ensure the optional
     rewrite_mapfunc_t and ap_register_rewrite_mapfunc functions are
     available to third party modules. [Graham Leggett]

  *) Build the odbc dbd driver by default on Windows.
     DBD_LIST is still used to build additional dbd drivers.
     [Tom Donovan]

  *) Worker MPM: Crosscheck that idle workers are still available before using
     them and thus preventing an overflow of the worker queue which causes
     a SegFault. PR 45605 [Denis Ustimenko <denusk gmail.com>]

  *) mod_proxy_ajp: Fix wrongly formatted requests where client
     sets Content-Length header, but doesn't provide a body.
     Servlet container always expects that next packet is
     body whenever C-L is present in the headers. This can lead
     to wrong interpretation of the packets. In this case
     send the empty body packet, so container can deal with
     that. [Mladen Turk]

  *) mod_authnz_ldap: don't return NULL-valued environment variables to
     other modules.  PR 39045 [Francois Pesce <francois.pesce gmail.com>]

  *) Don't adjust case in pathname components that are not of interest
     to mod_mime.  Fixes mod_negotiation's use of such components.
     PR 43250 [Basant Kumar Kukreja <basant.kukreja sun.com>]
