@@ -2,6 +2,8 @@
 Changes with Apache 2.3.0
 [ When backported to 2.2.x, remove entry from this file ]
 
+  *) core: Add ap_timeout_parameter_parse to public API. [Ruediger Pluem]
+
   *) mod_proxy: Prevent segmentation faults by correctly flushing all buckets
      from the proxy backend. PR 45792 [Ruediger Pluem]
 
